traefik-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik
          args:
            - "--api.dashboard=true"
            - "--api.insecure=false"

            - "--providers.kubernetescrd=true"
            - "--providers.kubernetesingress=false"

            - "--entrypoints.websecure.address=:443"

            - "--log.level=INFO"
          ports:
            - name: websecure
              containerPort: 443
